# air_quality_monitoring

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/air_quality/: main.py
backend/air_quality/database/: models.py
backend/alembic/: env.py
backend/alembic/versions/: b57ded9115b7_create_index_atmo_table.py
backend/migrations/: alembic.ini
backend/migrations/datasets/: env.py
backend/migrations/datasets/indicators/: 2024_11_24_1642_create_atmo_table.py
backend/migrations/datasets/pollution/: 2024_11_24_1711_create_episodes_table.py
backend/tests/: test_main.py
